Add test to find invalid loot. Cleanup invalid loot. Fix a couple of bugs. Decorate dream world a bit.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -151,6 +151,37 @@ Current tasks:
     - Mechanic idea:
         - Survive with no life as long as you have spirit energy,
 
+    - Enemy with hard shell that can only be broken by Staff bonk or clone explosion
+        - Make clone immune to damage once detonation sequence cannot be aborted.
+
+    - Touch hit during movement applies too many times.
+        - This doesn't really matter since we ignore the duplicate effects
+            - iframes from the first damage hit prevent damage from future hits.
+            - knockback is ignored when the player is already knocked back.
+        - knockback is applies for each pixel we check blocking movement, instead of once per movement.
+        - Ideally, we would return a list of all hits+pixels and decide what the aggregate effect is.
+            - Some hits might take priority over others or prevent others.
+
+    - Check killing frost beast underwater grants ice element.
+
+    - Add first daughter tree area
+        - Large beetle with hard shell immune to regular damage (except staff bonks+clone explosion)
+            - Higher resolution art requested.
+        - Plants on cliffs seed attacks can break the shell
+        - Beetle cannot be knocked back with regular attacks but it doesn't change directions very fast
+        - Summons small beetles to drop from the sky on occasion
+        - Faster when spike shell broken (shell is just a layer on top of the normal graphics)
+            - Spike shell shows damage frames over time + breaking animation.
+        - Drops a Peach Piece on defeat
+        - Add a thick spider web barrier blocking the tree that is removed when the boss is defeated.
+            - Pending art, for now I can just cobble something together by layering up existing web tiles.
+        - Add sticky web tiles
+            gfx/tiles/webtiles.png 3 tiles wide
+            - Boss either occasionally drops sticky webs where it is, or spits them at the player
+            - Sticky web tiles can be cleared with chakram or barrier burst, similar to slippery bead tiles.
+            - Special interaction with fire damage, adds a small fire nova on a 200ms delay that will spread to other tiles and hurt enemies+allies.
+                - Maybe make this isBurnable tile prop and apply to bushes as well.
+
     - Add a dissipating spark effect when a circular spark is removed.
         - This will make large sparks disappearing on hit/TTL/cleanup be less jarring with no mechanical impact (the effect isn't interactive).
         - Just a shrinking spark effect.
@@ -162,6 +193,12 @@ Current tasks:
             - Add single rolling stone puzzle to new gauntlet floor
             - Add additional rolling stones that can be used to make gauntlet easier
         - Make Cocoon pits drop you to lower levels.
+
+    - Challenge puzzle ideas:
+        - Drop off 2 ledges with clone + staff to hit two buttons at once that opens locked door at the top of the ledge.
+        - Zero tool puzzle requiring you to carefully throw bushes to solve puzzles/defeat enemies
+        - Throw bushes to defeat enemies in the spirit world
+            - Allow spirit sight but don't allow moving projection while carrying something
 
     - Keep charging through rolls when wearing iron boots.
 
